# sekupy

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  cov.xml  development.yaml  environment.yaml  examples_rsa_searchlight.md  pyproject.toml  requirements-doc.txt  requirements-legacy.txt  requirements-min.txt  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yaml
doc/source/: analysis.rst  conf.py  index.rst  io.rst  plot.rst  preprocessing.rst  sg_execution_times.rst  utils.rst
doc/source/analysis/: base.rst  fingerprint.rst  glm.rst  rsa.rst
doc/source/auto_examples/: index.rst  plot_01_load_data.ipynb  plot_01_load_data.py  plot_01_load_data.rst  plot_01_load_data_codeobj.pickle  plot_02_preprocessing.ipynb  plot_02_preprocessing.py.md5  plot_02_preprocessing.rst  plot_02_preprocessing_codeobj.pickle  plot_03_roi_decoding.ipynb  plot_03_roi_decoding.py  plot_03_roi_decoding.py.md5  plot_03_roi_decoding.rst  plot_03_roi_decoding_codeobj.pickle  plot_04_decoding_permutation.ipynb  plot_04_decoding_permutation.rst  plot_04_decoding_permutation_codeobj.pickle  plot_05_cross_decoding.ipynb  plot_05_cross_decoding.rst  plot_05_cross_decoding_codeobj.pickle  plot_06_rsa.ipynb  plot_06_rsa.rst  plot_06_rsa_codeobj.pickle  plot_07_fingerprint.ipynb  plot_07_fingerprint.py  plot_07_fingerprint.py.md5  plot_07_fingerprint.rst  plot_07_fingerprint_codeobj.pickle  plot_08_brain_states.ipynb  plot_08_brain_states.py  plot_08_brain_states.py.md5  plot_08_brain_states.rst  plot_08_brain_states_codeobj.pickle  plot_09_parameter_sweep.ipynb  plot_09_parameter_sweep.py.md5  plot_09_parameter_sweep.rst  plot_09_parameter_sweep_codeobj.pickle  plot_10_results_analysis.ipynb  plot_10_results_analysis.py.md5  plot_10_results_analysis.rst  (+2 more)
doc/source/connectivity/: base.rst
doc/source/decoding/: base.rst  searchlight.rst  spatial.rst
doc/source/ext/: base.rst  nilearn.rst  sklearn.rst
doc/source/io/: base.rst  bids.rst  configuration.rst  connectivity.rst  loader.rst  mambo.rst  mapper.rst  subjects.rst
doc/source/plot/: base.rst
doc/source/preprocessing/: balancing.rst  base.rst  connectivity.rst  filters.rst  functions.rst  mapper.rst  math.rst  memory.rst  normalizers.rst  pipelines.rst  regression.rst  sklearn.rst  slicers.rst
doc/source/results/: base.rst
doc/source/simulation/: base.rst
doc/source/states/: base.rst  metrics.rst  subsamplers.rst
doc/source/utils/: atlas.rst  base.rst  bids.rst  dataset.rst  files.rst  image.rst  math.rst  matrix.rst  time.rst
examples/: README.rst  plot_02_preprocessing.py  plot_04_decoding_permutation.py  plot_05_cross_decoding.py  plot_06_rsa.py  plot_09_parameter_sweep.py  plot_10_results_analysis.py  plot_mne_data.py
joss/: paper.bib  paper.md
pyitab/: base.py  mixin.py
pyitab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyitab/analysis/: __init__.py  analysis.py  base.py  configurator.py  fingerprint.py  iterator.py  linear_model.py  pipeline.py  results.py  roi.py  script.py  utils.py  wrappers.py
pyitab/analysis/connectivity/: analysis.py  base.py  multivariate.py  trajectory.py  utils.py
pyitab/analysis/decoding/: __init__.py  cross_decoding.py  regression.py  roi_decoding.py  temporal_decoding.py
pyitab/analysis/fingerprint/: __init__.py  fingerprint.py  task_prediction.py
pyitab/analysis/glm/: __init__.py
pyitab/analysis/results/: __init__.py  base.py  bids.py  dataframe.py  simulations.py
pyitab/analysis/rsa/: rsa.py
pyitab/analysis/searchlight/: __init__.py  temporal_searchlight.py  utils.py
pyitab/analysis/states/: algorithms.py  base.py  gsbs.py  metrics.py  pipeline.py  plot.py  subsamplers.py  utils.py
pyitab/analysis/tests/: iterator.py  test_analysis.py  test_configurator.py  test_crossdecoding.py  test_decoding.py  test_fingerprint.py  test_iterator.py  test_pipeline.py  test_rsa.py  test_searchlight.py  test_states.py
pyitab/dataset/: atoms.py  base.py  collections.py  dataset.py  detrend.py  learner.py  mappers.py  mri.py  selector.py  utils.py  zscore.py
pyitab/ext/nilearn/: searchlight.py  utils.py
pyitab/ext/sklearn/: _validation.py  cluster.py  feature_selection.py
pyitab/io/: __init__.py  base.py  bids.py  configuration.py  connectivity.py  loader.py  mambo.py  mapper.py  subjects.py  utils.py
pyitab/io/_loaders/: _fmri.py  (+3 more)
pyitab/plot/: connectivity.py  nodes.py  palette.py
pyitab/preprocessing/: __init__.py  base.py  connectivity.py  filter.py  functions.py  mapper.py  math.py  memory.py  normalizers.py  permutation.py  pipelines.py  regression.py  sklearn.py  slicers.py
pyitab/results/: __init__.py  _bids_loaders.py  base.py  bids.py  bursts.py  dataframe.py  simulations.py
pyitab/simulation/: autoregressive.py  bold.py  connectivity.py  loader.py  models.py
pyitab/tests/: __init__.py
pyitab/utils/: __init__.py  atlas.py  bids.py  dataset.py  files.py  image.py  math.py  matrix.py  networks.py  scores.py  time.py
sekupy/: base.py  mixin.py
sekupy/analysis/: __init__.py  base.py  configurator.py  iterator.py  linear_model.py  pipeline.py  wrappers.py
sekupy/dataset/: atoms.py  base.py  collections.py  dataset.py  detrend.py  events.py  learner.py  mappers.py  mri.py  selector.py  zscore.py
sekupy/io/: __init__.py  base.py  bids.py  configuration.py  connectivity.py  loader.py  mambo.py  mne.py  subjects.py
sekupy/plot/: connectivity.py  nodes.py  palette.py
sekupy/preprocessing/: __init__.py  base.py  connectivity.py  filter.py  functions.py  mapper.py  math.py  memory.py  mne.py  normalizers.py  permutation.py  pipelines.py  regression.py  sklearn.py  slicers.py
sekupy/results/: __init__.py  _bids_loaders.py  base.py  bids.py  bursts.py  simulations.py
sekupy/simulation/: autoregressive.py  bold.py  connectivity.py  loader.py
sekupy/tests/: __init__.py
sekupy/utils/: __init__.py  bids.py  dataset.py  files.py  image.py  matlab.py  matrix.py  networks.py  scores.py  time.py
(+350 files in other folders)
